// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportJavaClasses component tests Should close Modal after opening it and clicking on the Cancel button 1`] = `
<body
  class=""
>
  <div>
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-10"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should move to second step 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-12"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-6"
          aria-labelledby="pf-modal-part-5"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-5"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-4"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-large-5-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-5"
            >
              
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Import Java classes
              </span>
            </h1>
            <div
              class="pf-v5-c-modal-box__description"
              id="pf-modal-part-6"
            >
              It converts your Java assets to DMN types. This is a one-time import action: if the Java class gets updated, you will need to reimport it.
            </div>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
          >
            <div
              class="pf-v5-c-wizard import-java-classes"
              style="height: 600px;"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                      2
                    </span>
                     
                    Select fields
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-5"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-13"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select Java classes
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-14"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select fields
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-15"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Review
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                      <table
                        aria-label="field-table"
                        class="pf-v5-c-table pf-m-grid-md"
                        data-ouia-component-id="OUIA-Generated-Table-2"
                        data-ouia-component-type="PF5/Table"
                        data-ouia-safe="true"
                        role="grid"
                      >
                        <tbody
                          class="pf-v5-c-table__tbody pf-m-expanded"
                          role="rowgroup"
                        >
                          <tr
                            class="pf-v5-c-table__tr"
                            data-ouia-component-id="OUIA-Generated-TableRow-1"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td pf-v5-c-table__toggle"
                              tabindex="-1"
                            >
                              <button
                                aria-disabled="false"
                                aria-expanded="true"
                                aria-label="Details"
                                aria-labelledby="simple-node0 expand-toggle0"
                                class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Button-plain-9"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe="true"
                                id="expand-toggle0"
                                type="button"
                              >
                                <div
                                  class="pf-v5-c-table__toggle-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                    />
                                  </svg>
                                </div>
                              </button>
                            </td>
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <span>
                                <strong>
                                  Author
                                </strong>
                              </span>
                              <span
                                class="dmn-type-name"
                              >
                                (Structure)
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-2"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  isAlive
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (boolean)
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-3"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  name
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (string)
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                        <tbody
                          class="pf-v5-c-table__tbody pf-m-expanded"
                          role="rowgroup"
                        >
                          <tr
                            class="pf-v5-c-table__tr"
                            data-ouia-component-id="OUIA-Generated-TableRow-4"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td pf-v5-c-table__toggle"
                              tabindex="-1"
                            >
                              <button
                                aria-disabled="false"
                                aria-expanded="true"
                                aria-label="Details"
                                aria-labelledby="simple-node1 expand-toggle1"
                                class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Button-plain-10"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe="true"
                                id="expand-toggle1"
                                type="button"
                              >
                                <div
                                  class="pf-v5-c-table__toggle-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                    />
                                  </svg>
                                </div>
                              </button>
                            </td>
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <span>
                                <strong>
                                  Book
                                </strong>
                              </span>
                              <span
                                class="dmn-type-name"
                              >
                                (Structure)
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-5"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  test
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (Any)
                                </span>
                                <button
                                  aria-disabled="false"
                                  class="pf-v5-c-button pf-m-primary pf-m-small fetch-button"
                                  data-ouia-component-id="OUIA-Generated-Button-primary-6"
                                  data-ouia-component-type="PF5/Button"
                                  data-ouia-safe="true"
                                  type="button"
                                >
                                  Fetch "Test" class
                                </button>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-6"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  title
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (string)
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-7"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  year
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (number)
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-secondary"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-13"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-5"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="submit"
                  >
                    Next
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-5"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should move to second step and fetch a Java Class 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-15"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-7"
          aria-labelledby="pf-modal-part-6"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-6"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-5"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-large-6-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-6"
            >
              
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Import Java classes
              </span>
            </h1>
            <div
              class="pf-v5-c-modal-box__description"
              id="pf-modal-part-7"
            >
              It converts your Java assets to DMN types. This is a one-time import action: if the Java class gets updated, you will need to reimport it.
            </div>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
          >
            <div
              class="pf-v5-c-wizard import-java-classes"
              style="height: 600px;"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                      2
                    </span>
                     
                    Select fields
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-6"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-16"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select Java classes
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-17"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select fields
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-18"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Review
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                      <table
                        aria-label="field-table"
                        class="pf-v5-c-table pf-m-grid-md"
                        data-ouia-component-id="OUIA-Generated-Table-6"
                        data-ouia-component-type="PF5/Table"
                        data-ouia-safe="true"
                        role="grid"
                      >
                        <tbody
                          class="pf-v5-c-table__tbody pf-m-expanded"
                          role="rowgroup"
                        >
                          <tr
                            class="pf-v5-c-table__tr"
                            data-ouia-component-id="OUIA-Generated-TableRow-15"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td pf-v5-c-table__toggle"
                              tabindex="-1"
                            >
                              <button
                                aria-disabled="false"
                                aria-expanded="true"
                                aria-label="Details"
                                aria-labelledby="simple-node0 expand-toggle0"
                                class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Button-plain-15"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe="true"
                                id="expand-toggle0"
                                type="button"
                              >
                                <div
                                  class="pf-v5-c-table__toggle-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                    />
                                  </svg>
                                </div>
                              </button>
                            </td>
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <span>
                                <strong>
                                  Author
                                </strong>
                              </span>
                              <span
                                class="dmn-type-name"
                              >
                                (Structure)
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-16"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  isAlive
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (boolean)
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-17"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  name
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (string)
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                        <tbody
                          class="pf-v5-c-table__tbody pf-m-expanded"
                          role="rowgroup"
                        >
                          <tr
                            class="pf-v5-c-table__tr"
                            data-ouia-component-id="OUIA-Generated-TableRow-18"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td pf-v5-c-table__toggle"
                              tabindex="-1"
                            >
                              <button
                                aria-disabled="false"
                                aria-expanded="true"
                                aria-label="Details"
                                aria-labelledby="simple-node1 expand-toggle1"
                                class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Button-plain-16"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe="true"
                                id="expand-toggle1"
                                type="button"
                              >
                                <div
                                  class="pf-v5-c-table__toggle-icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 320 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                    />
                                  </svg>
                                </div>
                              </button>
                            </td>
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <span>
                                <strong>
                                  Book
                                </strong>
                              </span>
                              <span
                                class="dmn-type-name"
                              >
                                (Structure)
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-19"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  test
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (Test)
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-20"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  title
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (string)
                                </span>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                            data-ouia-component-id="OUIA-Generated-TableRow-21"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <div
                                class="pf-v5-c-table__expandable-row-content"
                              >
                                <span>
                                  year
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (number)
                                </span>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                        <tbody
                          class="pf-v5-c-table__tbody pf-m-expanded"
                          role="rowgroup"
                        >
                          <tr
                            class="pf-v5-c-table__tr"
                            data-ouia-component-id="OUIA-Generated-TableRow-22"
                            data-ouia-component-type="PF5/TableRow"
                            data-ouia-safe="true"
                          >
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            />
                            <td
                              class="pf-v5-c-table__td"
                              tabindex="-1"
                            >
                              <span>
                                <strong>
                                  Test
                                </strong>
                              </span>
                              <span
                                class="dmn-type-name"
                              >
                                (Structure)
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-secondary"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-16"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-7"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="submit"
                  >
                    Next
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-6"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should move to third step 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-22"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-9"
          aria-labelledby="pf-modal-part-8"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-8"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-7"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-large-8-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-8"
            >
              
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Import Java classes
              </span>
            </h1>
            <div
              class="pf-v5-c-modal-box__description"
              id="pf-modal-part-9"
            >
              It converts your Java assets to DMN types. This is a one-time import action: if the Java class gets updated, you will need to reimport it.
            </div>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
          >
            <div
              class="pf-v5-c-wizard import-java-classes"
              style="height: 600px;"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                      3
                    </span>
                     
                    Review
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-8"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-22"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select Java classes
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-23"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select fields
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-24"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Review
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                      <div
                        class="fields-table"
                      >
                        <table
                          aria-label="field-table"
                          class="pf-v5-c-table pf-m-grid-md"
                          data-ouia-component-id="OUIA-Generated-Table-16"
                          data-ouia-component-type="PF5/Table"
                          data-ouia-safe="true"
                          role="grid"
                        >
                          <tbody
                            class="pf-v5-c-table__tbody pf-m-expanded"
                            role="rowgroup"
                          >
                            <tr
                              class="pf-v5-c-table__tr"
                              data-ouia-component-id="OUIA-Generated-TableRow-52"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td pf-v5-c-table__toggle"
                                tabindex="-1"
                              >
                                <button
                                  aria-disabled="false"
                                  aria-expanded="true"
                                  aria-label="Details"
                                  aria-labelledby="simple-node0 expand-toggle0"
                                  class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                  data-ouia-component-id="OUIA-Generated-Button-plain-29"
                                  data-ouia-component-type="PF5/Button"
                                  data-ouia-safe="true"
                                  id="expand-toggle0"
                                  type="button"
                                >
                                  <div
                                    class="pf-v5-c-table__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                      />
                                    </svg>
                                  </div>
                                </button>
                              </td>
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <span>
                                  <strong>
                                    Author
                                  </strong>
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (Structure)
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                              data-ouia-component-id="OUIA-Generated-TableRow-53"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              />
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <div
                                  class="pf-v5-c-table__expandable-row-content"
                                >
                                  <span>
                                    isAlive
                                  </span>
                                  <span
                                    class="dmn-type-name"
                                  >
                                    (boolean)
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                              data-ouia-component-id="OUIA-Generated-TableRow-54"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              />
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <div
                                  class="pf-v5-c-table__expandable-row-content"
                                >
                                  <span>
                                    name
                                  </span>
                                  <span
                                    class="dmn-type-name"
                                  >
                                    (string)
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                          <tbody
                            class="pf-v5-c-table__tbody pf-m-expanded"
                            role="rowgroup"
                          >
                            <tr
                              class="pf-v5-c-table__tr"
                              data-ouia-component-id="OUIA-Generated-TableRow-55"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td pf-v5-c-table__toggle"
                                tabindex="-1"
                              >
                                <button
                                  aria-disabled="false"
                                  aria-expanded="true"
                                  aria-label="Details"
                                  aria-labelledby="simple-node1 expand-toggle1"
                                  class="pf-v5-c-button pf-m-plain pf-m-expanded"
                                  data-ouia-component-id="OUIA-Generated-Button-plain-30"
                                  data-ouia-component-type="PF5/Button"
                                  data-ouia-safe="true"
                                  id="expand-toggle1"
                                  type="button"
                                >
                                  <div
                                    class="pf-v5-c-table__toggle-icon"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="pf-v5-svg"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      viewBox="0 0 320 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                                      />
                                    </svg>
                                  </div>
                                </button>
                              </td>
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <span>
                                  <strong>
                                    Book
                                  </strong>
                                </span>
                                <span
                                  class="dmn-type-name"
                                >
                                  (Structure)
                                </span>
                              </td>
                            </tr>
                            <tr
                              class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                              data-ouia-component-id="OUIA-Generated-TableRow-56"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              />
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <div
                                  class="pf-v5-c-table__expandable-row-content"
                                >
                                  <span>
                                    test
                                  </span>
                                  <span
                                    class="dmn-type-name"
                                  >
                                    (Any)
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                              data-ouia-component-id="OUIA-Generated-TableRow-57"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              />
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <div
                                  class="pf-v5-c-table__expandable-row-content"
                                >
                                  <span>
                                    title
                                  </span>
                                  <span
                                    class="dmn-type-name"
                                  >
                                    (string)
                                  </span>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
                              data-ouia-component-id="OUIA-Generated-TableRow-58"
                              data-ouia-component-type="PF5/TableRow"
                              data-ouia-safe="true"
                            >
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              />
                              <td
                                class="pf-v5-c-table__td"
                                tabindex="-1"
                              >
                                <div
                                  class="pf-v5-c-table__expandable-row-content"
                                >
                                  <span>
                                    year
                                  </span>
                                  <span
                                    class="dmn-type-name"
                                  >
                                    (number)
                                  </span>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-secondary"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-23"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-12"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="submit"
                  >
                    Import
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-8"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should search box with results works 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-8"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-4"
          aria-labelledby="pf-modal-part-3"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-3"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-2"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-large-3-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-3"
            >
              
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Import Java classes
              </span>
            </h1>
            <div
              class="pf-v5-c-modal-box__description"
              id="pf-modal-part-4"
            >
              It converts your Java assets to DMN types. This is a one-time import action: if the Java class gets updated, you will need to reimport it.
            </div>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
          >
            <div
              class="pf-v5-c-wizard import-java-classes"
              style="height: 600px;"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                      1
                    </span>
                     
                    Select Java classes
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-3"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-7"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select Java classes
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          class="pf-v5-c-wizard__nav-link"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-8"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select fields
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          aria-disabled="true"
                          class="pf-v5-c-wizard__nav-link pf-m-disabled"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-9"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          Review
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                      <div
                        class="fs-search-input"
                      >
                        <div
                          style="display: contents;"
                        >
                          <div
                            class="pf-v5-c-text-input-group"
                          >
                            <div
                              class="pf-v5-c-text-input-group__main pf-m-icon"
                            >
                              <span
                                class="pf-v5-c-text-input-group__text"
                              >
                                <span
                                  class="pf-v5-c-text-input-group__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                    />
                                  </svg>
                                </span>
                                <input
                                  aria-label="Search input"
                                  class="pf-v5-c-text-input-group__text-input"
                                  placeholder="Type the class name here"
                                  type="text"
                                  value="test"
                                />
                              </span>
                            </div>
                            <div
                              class="pf-v5-c-text-input-group__utilities"
                            >
                              <button
                                aria-disabled="false"
                                aria-label="Reset"
                                class="pf-v5-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Button-plain-5"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe="true"
                                type="button"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="pf-v5-svg"
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  viewBox="0 0 352 512"
                                  width="1em"
                                >
                                  <path
                                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                      <ul
                        aria-label="class-data-list"
                        class="pf-v5-c-data-list pf-m-grid-md"
                        role="list"
                      >
                        <li
                          aria-labelledby=""
                          class="pf-v5-c-data-list__item"
                          id=""
                          name="com.Book"
                        >
                          <div
                            class="pf-v5-c-data-list__item-row"
                          >
                            <div
                              class="pf-v5-c-data-list__item-control"
                            >
                              <div
                                class="pf-v5-c-data-list__check"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-labelledby="com.Book"
                                  rowid=""
                                  type="checkbox"
                                />
                              </div>
                            </div>
                            <div
                              class="pf-v5-c-data-list__cell"
                              rowid=""
                            >
                              <span
                                id="com.Book"
                              >
                                com.Book
                              </span>
                            </div>
                          </div>
                        </li>
                        <li
                          aria-labelledby=""
                          class="pf-v5-c-data-list__item"
                          id=""
                          name="com.Author"
                        >
                          <div
                            class="pf-v5-c-data-list__item-row"
                          >
                            <div
                              class="pf-v5-c-data-list__item-control"
                            >
                              <div
                                class="pf-v5-c-data-list__check"
                              >
                                <input
                                  aria-invalid="false"
                                  aria-labelledby="com.Author"
                                  rowid=""
                                  type="checkbox"
                                />
                              </div>
                            </div>
                            <div
                              class="pf-v5-c-data-list__cell"
                              rowid=""
                            >
                              <span
                                id="com.Author"
                              >
                                com.Author
                              </span>
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-v5-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-3"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    type="submit"
                  >
                    Next
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-3"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests Should show Modal after clicking on the button 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  >
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-2"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-v5-c-modal-box pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Modal-large-1"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Modal-large-1-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-1"
            >
              
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Import Java classes
              </span>
            </h1>
            <div
              class="pf-v5-c-modal-box__description"
              id="pf-modal-part-2"
            >
              It converts your Java assets to DMN types. This is a one-time import action: if the Java class gets updated, you will need to reimport it.
            </div>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
          >
            <div
              class="pf-v5-c-wizard import-java-classes"
              style="height: 600px;"
            >
              <button
                aria-expanded="false"
                aria-label="Wizard Toggle"
                class="pf-v5-c-wizard__toggle"
              >
                <span
                  class="pf-v5-c-wizard__toggle-list"
                >
                  <span
                    class="pf-v5-c-wizard__toggle-list-item"
                  >
                    <span
                      class="pf-v5-c-wizard__toggle-num"
                    >
                      1
                    </span>
                     
                    Select Java classes
                  </span>
                </span>
                <span
                  class="pf-v5-c-wizard__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="pf-v5-c-wizard__outer-wrap"
              >
                <div
                  class="pf-v5-c-wizard__inner-wrap"
                >
                  <nav
                    class="pf-v5-c-wizard__nav"
                    data-ouia-component-id="OUIA-Generated-WizardNav-1"
                    data-ouia-component-type="PF5/WizardNav"
                    data-ouia-safe="true"
                  >
                    <ol
                      class="pf-v5-c-wizard__nav-list"
                      role="list"
                    >
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="step"
                          class="pf-v5-c-wizard__nav-link pf-m-current"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-1"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          type="button"
                        >
                          Select Java classes
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          aria-disabled="true"
                          class="pf-v5-c-wizard__nav-link pf-m-disabled"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-2"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          Select fields
                        </button>
                      </li>
                      <li
                        class="pf-v5-c-wizard__nav-item"
                      >
                        <button
                          aria-current="false"
                          aria-disabled="true"
                          class="pf-v5-c-wizard__nav-link pf-m-disabled"
                          data-ouia-component-id="OUIA-Generated-WizardNavItem-3"
                          data-ouia-component-type="PF5/WizardNavItem"
                          data-ouia-safe="true"
                          disabled=""
                          type="button"
                        >
                          Review
                        </button>
                      </li>
                    </ol>
                  </nav>
                  <div
                    class="pf-v5-c-wizard__main"
                  >
                    <div
                      class="pf-v5-c-wizard__main-body"
                    >
                      <div
                        class="fs-search-input"
                      >
                        <div
                          style="display: contents;"
                        >
                          <div
                            aria-describedby="pf-tooltip-4"
                            class="pf-v5-c-text-input-group"
                          >
                            <div
                              class="pf-v5-c-text-input-group__main pf-m-icon"
                            >
                              <span
                                class="pf-v5-c-text-input-group__text"
                              >
                                <span
                                  class="pf-v5-c-text-input-group__icon"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                                    />
                                  </svg>
                                </span>
                                <input
                                  aria-label="Search input"
                                  class="pf-v5-c-text-input-group__text-input"
                                  placeholder="Type the class name here"
                                  type="text"
                                  value=""
                                />
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-v5-c-empty-state"
                      >
                        <div
                          class="pf-v5-c-empty-state__content"
                        >
                          <div
                            class="pf-v5-c-empty-state__header"
                          >
                            <div
                              class="pf-v5-c-empty-state__icon"
                            >
                              <svg
                                aria-hidden="true"
                                class="pf-v5-svg"
                                fill="currentColor"
                                height="1em"
                                role="img"
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M488.6 250.2L392 214V105.5c0-15-9.3-28.4-23.4-33.7l-100-37.5c-8.1-3.1-17.1-3.1-25.3 0l-100 37.5c-14.1 5.3-23.4 18.7-23.4 33.7V214l-96.6 36.2C9.3 255.5 0 268.9 0 283.9V394c0 13.6 7.7 26.1 19.9 32.2l100 50c10.1 5.1 22.1 5.1 32.2 0l103.9-52 103.9 52c10.1 5.1 22.1 5.1 32.2 0l100-50c12.2-6.1 19.9-18.6 19.9-32.2V283.9c0-15-9.3-28.4-23.4-33.7zM358 214.8l-85 31.9v-68.2l85-37v73.3zM154 104.1l102-38.2 102 38.2v.6l-102 41.4-102-41.4v-.6zm84 291.1l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6zm240 112l-85 42.5v-79.1l85-38.8v75.4zm0-112l-102 41.4-102-41.4v-.6l102-38.2 102 38.2v.6z"
                                />
                              </svg>
                            </div>
                            <div
                              class="pf-v5-c-empty-state__title"
                            >
                              <h6
                                class="pf-v5-c-empty-state__title-text"
                              >
                                No Java classes found or selected
                              </h6>
                            </div>
                          </div>
                          <div
                            class="pf-v5-c-empty-state__body"
                          >
                            Type the Java class name or part of the name to find the one you want to import
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <footer
                  class="pf-v5-c-wizard__footer"
                >
                  <button
                    aria-disabled="true"
                    class="pf-v5-c-button pf-m-primary pf-m-disabled"
                    data-ouia-component-id="OUIA-Generated-Button-primary-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="submit"
                  >
                    Next
                  </button>
                  <div
                    class="pf-v5-c-wizard__footer-cancel"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-link"
                      data-ouia-component-id="OUIA-Generated-Button-link-1"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-live="off"
    class="pf-v5-c-tooltip pf-m-top"
    id="pf-tooltip-4"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 0; transition: opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: revert;"
  >
    <div
      class="pf-v5-c-tooltip__arrow"
    />
    <div
      class="pf-v5-c-tooltip__content"
    >
      Type at least 3 characters to begin the search
    </div>
  </div>
</body>
`;

exports[`ImportJavaClasses component tests should render ImportJavaClasses Button component 1`] = `
<body>
  <div>
    <button
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary pf-m-progress"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      data-testid="modal-wizard-button"
      type="button"
    >
      Import Java classes
    </button>
  </div>
</body>
`;
